# playdoh

./: .env  .gitignore  .pre-commit-config.yaml  Cargo.toml
app/: Cargo.toml
app/src/: custom_response.rs  error.rs  lib.rs  pagination.rs  request_query.rs  starting.rs
app/src/apps/: mod.rs
app/src/apps/common/: alerts.rs
app/src/apps/runtime/: api.rs  mod.rs
app/src/apps/runtime/controller/: mod.rs  runtime_function.rs  runtime_log.rs
app/src/apps/runtime/service/: mod.rs  runtime_function.rs  runtime_function_history.rs  runtime_function_log.rs
app/src/apps/system/: api.rs  mod.rs
app/src/apps/system/api/: sys_home.rs  sys_menu.rs  sys_online.rs  sys_role.rs  sys_user.rs
app/src/apps/system/service/: mod.rs  sys_dept.rs  sys_menu.rs  sys_role.rs  sys_role_api.rs  sys_user.rs  sys_user_online.rs  sys_user_role.rs
app/src/common/: ctx.rs  mod.rs
app/src/middleware/: ctx.rs  mod.rs  oper_log.rs
app/src/utils/: api_utils.rs  jwt.rs  mod.rs  permission.rs  rand_utils.rs  web_utils.rs
app/templates/: index.html  login.html  workspace.html
app/templates/alerts/: success_alert_with_button.html
app/templates/runtime/: fuction_add.html  fuction_list.html  function_log.html
app/templates/test/: function.html
config/: config.toml  main.polar
configs/: Cargo.toml
configs/src/: configs.rs  get_config.rs  lib.rs
db/: Cargo.toml
db/migrations/: 20221108130545_2.sql  20221108144139_3_add_sys_oper_log.sql  20221110132146_4_add_sys_user_online.sql  20221201115327_5_add_menu.sql  20221203130620_6_add_sys_api_db.sql  20221208130951_7_add_sys_role_and_sys_role_user.sql  20221209121752_8_sys_menu_auth_type_and_sys_api_role.sql  20221211083531_9_add_sys_dept_role_sys_dept.sql  20230205122157_4_add_jscodetable.sql  20230221122529_1_set_up.down.sql  20230221122529_1_set_up.up.sql  2_add_tables.sql  2_user.sql
db/src/: db.rs  lib.rs
db/src/common/: ctx.rs
db/src/runtime/entities/: function.rs  function_history.rs  mod.rs  sys_function_dev.rs
db/src/runtime/models/: function.rs  function_history.rs  function_log.rs  mod.rs  (+1 more)
db/src/system/: mod.rs
js/: 06640256-3292-4253-a987-d15ee459d2a2.js  1703c143-6006-45ac-a781-a69d29cf0394.js  184ac517-9ca3-4a73-917f-e937a5244aa0.js  1b85a501-1994-4495-ba89-6731e9ba55a7.js  2f1f5bbd-06fa-4a07-8847-fac56ba98723.js  2f6876aa-b596-4df1-8db9-ad446fdb9b27.js  35827f10-e9ac-4b85-acf3-f0e369a85491.js  3fd4ed0f-966b-4981-8e92-42787320158a.js  56486a9f-8644-404b-9296-0f9bfd68246d.js  86834cba-a504-426b-a40c-c4cb2c41d052.js  901683b6-46ff-451e-90a5-f12185c34d01.js  9a5ac94c-70f2-4981-8a8d-4edd4d54f5d8.js  adbe4440-14bd-4036-9dc1-f433d32eda89.js  cd323d07-5b50-4211-a028-fc32f3c777f8.js  cdcb3463-58d6-404c-a9f0-fcbb6e5c305a.js
playoh_runtime/: Cargo.toml
playoh_runtime/src/: lib.rs
playoh_runtime/src/jsruntime/: mod.rs
playoh_runtime/src/jsruntime/ops/: fetch.rs  glue.js  mod.rs
playoh_runtime/src/jsruntime/ops/context/: message.rs
playoh_runtime/src/jsruntime/ops/notice/: email.rs
(+8 files in other folders)
