[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
configs = {path = "../configs"}

time = "0.3.16"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber  = {version = "0.3", features = ["json", "env-filter", "local-time", "registry"]}
