[package]
name = "playoh_runtime"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_core = "0.173.0"
deno_runtime = "0.99.0"
once_cell = "1.16.0"
tokio = { version = "1", features = ["full"] }
serde = "1.0.144"
serde_derive = "1.0.144"
lettre = "0.10.1"
lettre_email = "0.9.4"
chrono = "0.4.22"
uuid = {version="1.1.2",features = [
   "v4",                # Lets you generate random UUIDs
   "fast-rng",          # Use a faster (but still sufficiently random) RNG
   "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}
serde_json = "1.0.85"
